fix: fixed jdk version